v1.8.0/setup/6.-go-live/3.3.4-set-up-an-smtp-server-for-opencrvs-monitoring-alerts.md
# 7.1 Pre-Deployment Checklist

### **Pre-Deployment Checklist**

We provide you with the pre-deployment checklist Excel file that you must complete before going live in your country.  Some points are explained in this video and table:



| Step                                                                                                                                                 | Explanation                                                                                                                                                                                                                                                                                                                                                                                      |
| ---------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| Provisioning & Deployment pipelines for Backup, QA, staging & production working                                                                     | Your Github Actions should all be running without any errors in logs.  No red crosses!                                                                                                                                                                                                                                                                                                           |
| SMTP service tested for emails and alerts                                                                                                            | Not only should you confirm that emails are sending for staff, but you should receive emailed alerts too. If you have enabled Slack as the ALERT\_EMAIL you would see an SSH login alert in Slack like this: ![](<../../.gitbook/assets/Screenshot 2024-11-14 at 09.50.00.png>)                                                                                                                  |
| Setup DNS & TLS (HTTPS)                                                                                                                              | Your SSL certificate should be valid. ![](<../../.gitbook/assets/Screenshot 2024-11-14 at 09.57.13.png>)                                                                                                                                                                                                                                                                                         |
| Verify production backups restore on staging (pre-prod/mirror)                                                                                       | Ensure that the [backup & restore](../3.-installation/3.3-set-up-a-server-hosted-environment/4.3.7-backup-and-restore/) test is completed as documented.                                                                                                                                                                                                                                         |
| Verify logs roll over                                                                                                                                | Ensure that the logs are rotating so as not to use up disk-space.  Logfiles are configured to rotate automatically. Refer to logrotate.conf in your country config package.                                                                                                                                                                                                                      |
| Deploy latest release                                                                                                                                | Ensure that OpenCRVS is as up to date as it can be.  Refer to recent [releases](https://github.com/opencrvs/opencrvs-core/releases).                                                                                                                                                                                                                                                             |
| Alert sent of SSH login                                                                                                                              | Ensure the SSH login alert is firing as mentioned above in the "SMTP service tested" description.                                                                                                                                                                                                                                                                                                |
| Verify a warning is received when disk space is at 50%, alert at 70%                                                                                 | <p>To test this you need to create a temporary large file on your server.  Kibana will broadcast an alert. <img src="../../.gitbook/assets/Screenshot 2024-11-14 at 17.22.40.png" alt="">    This example terminal command creates a file of 200G: </p><pre class="language-bash"><code class="lang-bash">sudo dd if=/dev/zero of=/large-file-to-trigger-alerts bs=200G count=100.
</code></pre> |
| Send Sentry errors to Slack from QA and Prod                                                                                                         | A test Sentry error in Slack looks something like this: ![](<../../.gitbook/assets/Screenshot 2024-11-14 at 17.22.57.png>)                                                                                                                                                                                                                                                                       |
| Are National System Admin passwords updated, minimum 12 chars long and stored in a Password Manager.                                                 | The National System Admin must immediately change their password from the password that exists in [prod-employees.csv](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/data-seeding/employees/source/prod-employees.csv) . As they are a super user, they must confirm that the new password is saved in a password manager tool.                                            |
| Github account is owned by country and OpenCRVS Core team are removed as admins                                                                      | If the OpenCRVS team have assisted you to set up your Github organisation, they must no longer have "Admin" rights in your countryconfig repository otherwise they can potentially access citizen data.                                                                                                                                                                                          |
| Disable password SSH access, and enable 2FA SSH access. Verify users are required to set up 2FA and that the code is asked on every login after that | Our Provision Action should have enforced this but it is always a good idea to make sure that this is working successfully and no bugs have been introduced.                                                                                                                                                                                                                                     |
| Root login is disabled                                                                                                                               | As above.                                                                                                                                                                                                                                                                                                                                                                                        |
| Verify firewall hides all ports from the public internet                                                                                             | As above.                                                                                                                                                                                                                                                                                                                                                                                        |
| Clear all data from production instances created during testing                                                                                      | [Reset the production environment](../3.-installation/3.3-set-up-a-server-hosted-environment/3.3.6-deploy-automated-and-manual/4.3.6.5-resetting-a-server-environment.md) so that it is clear of any test registrations.                                                                                                                                                                         |
| Delete all test backups on backup server                                                                                                             | SSH into the backup server and delete any test backups.  Especially if you have configured the backup server to store more than the default 7 days of backups.                                                                                                                                                                                                                                   |
| Delete all terminal history on all **production**, **staging** and **backup** servers                                                                | <p>You might have exported secrets in Terminal to use when resetting environments or debugging.  Clear the terminal history like this:  </p><pre class="language-bash"><code class="lang-bash">history -c
history -w
</code></pre>                                                                                                                                                               |
| Remove OpenCRVS from SSH access to production, staging & backup servers                                                                              | If the OpenCRVS team have assisted you to provision your **production**, **staging** and **backup** servers, their SSH access must be removed otherwise they can still access citizen data.  Follow the steps as documented [here](../3.-installation/3.3-set-up-a-server-hosted-environment/4.3.5-provisioning-servers/4.3.5.1-ssh-access.md).                                                  |

{% hint style="info" %}
**Pre-Deployment Checklist Excel**

Download our Excel checklist in the "Technical" zip in the [OpenCRVS Requirements Templates](https://github.com/opencrvs/opencrvs-core/wiki/Gather-requirements)
{% endhint %}

{% embed url="https://youtu.be/YXVTX85Ixpk" %}

### Ongoing-Costs

As you have probably gathered from the server configuration section, some additional tooling is required to be paid for. These costs are negligble and support your installation with a secure code repository, bug tracking systems, alerting and forensic analysis. &#x20;

The Ongoing-Costs Excel sheet outlines the ownerhsip, status and costs and helps you project manage the provisioning of these tools.  They are explained in this video.



{% hint style="info" %}
**Ongoing-Costs Excel**

Download the Excel sheet in the "Technical" zip in the [OpenCRVS Requirements Templates](https://github.com/opencrvs/opencrvs-core/wiki/Gather-requirements)
{% endhint %}

{% embed url="https://youtu.be/871kvHpzcwI" %}

### Data Security Framework

The purpose of this document is to provide organisations with:

* An understanding of data security and privacy risks.&#x20;
* An understanding of the technical steps taken in OpenCRVS to mitigate against these risks.
* A guidance framework for the development of context-specific data security policies and procedures that should be designed and introduced by a government that has chosen to install OpenCRVS and digitise their civil registration system. &#x20;
* Security guidance for project managers and all staff involved on a temporary or continual basis in the following stages of an OpenCRVS project: a) design & implementation b) monitoring & maintenance and c) day-to-day usage of OpenCRVS.

Make sure that this document is shared with key stakeholders.

{% hint style="info" %}
**Data Security Framework**

Download the document from the "Technical" zip in the [OpenCRVS Requirements Templates](https://github.com/opencrvs/opencrvs-core/wiki/Gather-requirements)
{% endhint %}

{% embed url="https://youtu.be/QiupSNdfwjQ" %}

&#x20;

